[FIX] [STYLE] Example words now wrap

--- a/templates/src/styles/partials/character-and-examples.scss
+++ b/templates/src/styles/partials/character-and-examples.scss
@@ -33,6 +33,10 @@ START - Character and examples */
 		padding: 0 10px;
 	}
 
+	&__example-words {
+		flex-wrap: wrap;
+	}
+
 	// --------------------------------------
 	// Production
 
